[gd_scene load_steps=5 format=3 uid="uid://ryi1y05y3eps"]

[ext_resource type="Script" path="res://src/main_menu_scene/main_menu.gd" id="1_ytaf0"]
[ext_resource type="Texture2D" uid="uid://105xsiebyygm" path="res://src/assets/intro-background.png" id="2_x4mo6"]
[ext_resource type="Texture2D" uid="uid://dupu80g5rxiwb" path="res://src/assets/ai-prompt.svg" id="3_suqnk"]

[sub_resource type="GDScript" id="GDScript_sg5gn"]
script/source = "extends Node
 

var state = 0
"

[node name="main_menu" type="Node2D"]
position = Vector2(0, 4)
script = ExtResource("1_ytaf0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(2.08165e-12, 2.08165e-12)
transform = Transform2D(1, 2.08165e-12, 2.08165e-12, 1, 2.08165e-12, 2.08165e-12)

[node name="bg" type="TextureRect" parent="CanvasLayer"]
layout_direction = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("2_x4mo6")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_sg5gn")

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
texture = ExtResource("3_suqnk")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer2"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer2/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="start_game" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer2/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 55
keep_pressed_outside = true
text = "play game"

[node name="credits_button" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer2/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "view credits"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer2/HBoxContainer/CenterContainer/VBoxContainer/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer2/HBoxContainer/CenterContainer/VBoxContainer/credits_button" to="." method="_on_credits_button_pressed"]
